<resources>
    <string name="app_name">Video Call</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">********</string>
    <string name="first_name">First Name</string>
    <string name="your_name">Your name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_out">Sign Out</string>
</resources>