<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/_30dp"
    tools:context=".activity.SignInActivity">

    <TextView
        android:id="@+id/actSignIn_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actSignIn_tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_tvTitle" />

    <EditText
        android:id="@+id/actSignIn_etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/you_example_com"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_tvEmail"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/actSignIn_tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_etEmail" />

    <EditText
        android:id="@+id/actSignIn_etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_tvPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/actSignIn_btSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_10dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground"
        android:textSize="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_etPassword" />

    <TextView
        android:id="@+id/actSignIn_tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:padding="@dimen/_10dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSignIn_btSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>