<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_30dp"
        tools:context=".activity.SignUpActivity">

        <TextView
            android:id="@+id/actSignUp_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/actSignUp_tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/first_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_tvTitle" />

        <EditText
            android:id="@+id/actSignUp_etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_tvFirstName"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/actSignUp_tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/last_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_etFirstName" />

        <EditText
            android:id="@+id/actSignUp_etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_tvLastName"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/actSignUp_tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_etLastName" />

        <EditText
            android:id="@+id/actSignUp_etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/you_example_com"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_tvEmail"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/actSignUp_tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_etEmail" />

        <EditText
            android:id="@+id/actSignUp_etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_tvPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/actSignUp_btSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_10dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_etPassword" />

        <TextView
            android:id="@+id/actSignUp_tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:padding="@dimen/_10dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actSignUp_btSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
